openrewrite Sonar Style